--- a/helloworld/CMakeLists.txt
+++ b/helloworld/CMakeLists.txt
@@ -1,3 +1,4 @@
 cmake_minimum_required(VERSION 3.16.0)
 project(hello)
 add_executable(hello helloworld.cpp)
+install(TARGETS hello DESTINATION /usr/bin)
