--- a/student_shared_lib/CMakeLists.txt
+++ b/student_shared_lib/CMakeLists.txt
@@ -3,4 +3,4 @@ project(shared_object)
 include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
 add_library(student SHARED ${SOURCES})
-#install(TARGETS student DESTINATION /usr/lib)
+install(TARGETS student DESTINATION /lib)
