Refactored CMakeLists.txt

--- a/student_static_lib/CMakeLists.txt
+++ b/student_static_lib/CMakeLists.txt
@@ -3,4 +3,4 @@ project(shared_object)
 include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
 add_library(student STATIC ${SOURCES})
-#install(TARGETS student DESTINATION /usr/lib)
+install(TARGETS student DESTINATION /usr/lib)
